--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             align-items: center;
             justify-content: center;
             text-align: center;
-            background-image: url('Rexioushuka1/background-image.jpeg');
+            background-image: url('background-image.jpeg');
             /* Link to background image */
             background-size: cover;
             background-position: center;
